Add player points & logic for bonus points.  Modified flag function to reduce points if flag is placed on square without a bomb.  Removed gameover function when bomb is activated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="grid"></div>
     </div>
     <div>Flags left: <span id='flags-left'></span></div>
+    <div>Points: <span id="points"></span></div>
     <div id="result"></div>
-
 </body>
 </html>
